# ai_libs

./: .gitignore  DL-Frameworks-Vergleich.pptx  build_deck.js  cifar10_keras.py  cifar10_pytorch.py  cifar10_tf.py  doku.md  fashion_mnist.py  fashion_mnist_tensor.py  gen_visuals.py  load_data.py  mnist.py  mnist_keras.py  mnist_tensor.py  pyproject.toml  tst.py
deep_learning_libraries/: README.md  requirements.txt
deep_learning_libraries/keras/: fashion_mnist_keras.py
deep_learning_libraries/results/: experiment_table.csv  generate_results.py
