[project]
name = "neural-net"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.14.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
